KD-671 - TäTi - Push to remote
New syspref RemoteAPIs. You must set the remote API's you want to allow
Koha to integrate with.

These remote APIs are shown in catalogue/detail.pl under "Save"-button in

The user must be authenticated to the remote API he/she is interacting with.

Screencast about the feature in:
https://renki.vaarakirjastot.fi/tutorials/screencasts/cataloguingRecordPush.webm

TEST PLAN:

0. Configure "RemoteAPIs"-syspref to connect to remote APIs that speak Koha.
0.1. Add permission "cataloguing" -> "add_catalogue" to the user. This is needed
     to add records using the remote API.
1. Find a biblio and go to the "catalogue/detail.pl"
2. Click "Save"-link in #toolbar, under the dropdown menu, find the
   "Push to remote"-submenu. Click a remote target name to push the record
   there.
2.1. If you get an error, you probably need to authenticate yourself to the
     remote API, eg. Log in to the remote API's Koha staff client.
3. After successfully pushing the record, you are shown a radial menu of the
   available operations for the remote API.
4. Click the symbol/operation (not delete!) that opens a new tab and displays
   the freshly pushed biblio in the remote system's "catalogue/detail.pl"-view
5. Go back to the previous tab, from where you pushed the record, and click the
   "delete"-link to delete the record from the remote API.
5.1. Confirm deletion by going back to the remote system's
     "catalogue/detail.pl"-view and reloading the page. You should get ay
     "record not found"-warning.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
@@ -169,6 +169,9 @@ function verify_images() {
 <!--[if lt IE 9]>
 <script type="text/javascript" src="[% interface %]/lib/shims/json2.min.js"></script>
 <![endif]-->
+<script src="[% themelang %]/js/RadialMenu.js"></script>
+<link rel="stylesheet" type="text/css" href="[% themelang %]/css/RadialMenu.css" />
+<link rel="stylesheet" href="/css/font-awesome.css" />
 <script type="text/javascript" src="[% interface %]/js/browser.js"></script>
 <script type="text/javascript">
 //<![CDATA[
@@ -284,6 +287,12 @@ function verify_images() {
     });
 //]]>
 </script>
+[% IF jasmineTesting %]<!-- Load jasmine.js javscript BDD framework -->
+<link rel="stylesheet" href="[% interface %]/lib/jasmine-2.4.1/jasmine.css"/>
+<script type="text/javascript" src="[% interface %]/lib/jasmine-2.4.1/jasmine.js"></script>
+<script type="text/javascript" src="[% interface %]/lib/jasmine-2.4.1/jasmine-html.js"></script>
+<script type="text/javascript" src="[% interface %]/lib/jasmine-2.4.1/boot.js"></script>
+[% END %]
 </head>
 
 <body id="catalog_detail" class="catalog">
@@ -999,6 +1008,23 @@ function verify_images() {
 </div>
 [% END %]
 </div>
+
+<script src="[% themelang %]/js/RemoteAPIs/Driver.js"></script>
+<script src="[% themelang %]/js/RemoteAPIs/Driver/KohaSuomi.js"></script>
+<script src="[% themelang %]/js/Cataloguing/RecordPusher.js"></script>
+<script>
+  var jasmineTesting = "[% jasmineTesting %]";
+  var biblio = {biblionumber:  "[% biblionumber %]"};
+  var remoteAPIs = [% remoteAPIs %];
+  if (! jasmineTesting) {
+    var recordPusher = new Cataloguing.RecordPusher("#saveDropdownContainer .dropdown-menu", "dropdown-menu-list", "body", remoteAPIs, biblio);
+  }
+</script>
+<!-- Load jasmine specs/tests -->
+[% IF jasmineTesting %]
+<script src="[% themelang %]/js/t/RadialMenu.t.js"></script>
+<script src="[% themelang %]/js/t/Catalogue/RecordPusher.t.js"></script>
+[% END %]
 
 [% IF UseBetaFeatures && subscriptionsnumber && serialsadditems %][%# Serials display improvements fix%]
 <script type="text/javascript" src="[% interface %]/lib/jquery/plugins/jstree.min.js"></script>
