--- a/misc/cronjobs/iPostPDF/pdf_print.tmpl
+++ b/misc/cronjobs/iPostPDF/pdf_print.tmpl
@@ -11,7 +11,7 @@
 				height:80mm;
 			}
 			.content {
-				margin-top:120mm;
+				margin-top:20mm;
 				margin-left:10mm;
 				margin-right:10mm;
 			} 
@@ -21,7 +21,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="header">
+		<!--<div class="header">
 			<p class="sender"><TMPL_VAR NAME=BRANCH><br/>
 			 <TMPL_VAR NAME=BRANCHADDRESS><br/>
 			 <TMPL_VAR NAME=BRANCHZIPCODE> <TMPL_VAR NAME=BRANCHCITY>
@@ -33,7 +33,7 @@
 			<br/>
 			<TMPL_VAR NAME=ZIPCODE> <TMPL_VAR NAME=CITY>
 			</p>
-		</div>
+		</div>-->
 		<div class="content">
 			<TMPL_VAR NAME=ITEMINFO>
 			</p>
