--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1888,6 +1888,7 @@ span.permissiondesc {
     float: right;
     overflow-y: auto;
     overflow-x: hidden;
+    max-width: 50%;
 }
 ol.componentParts {
     padding-left: 3.2em;
