KD-986 - Display itemnotes in circ/pendingreserves.pl

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
@@ -129,6 +129,7 @@ $(document).ready(function() {
         <th class="string-sort">Libraries</th>
         <th>Available call numbers</th>
         <th>Available copy numbers</th>
+        <th>Itemnotes</th>
         <th>Available enumeration</th>
         <th class="string-sort">Available itypes</th>
         <th class="string-sort">Available locations</th>
@@ -160,6 +161,7 @@ $(document).ready(function() {
         <td>[% reserveloo.holdingbranch %]</td>
         <td>[% reserveloo.itemcallnumber %]</td>
         <td>[% reserveloo.copyno %]</td>
+        <td>[% reserveloo.itemnotes %]<br/></td>
         <td>[% reserveloo.enumchron %]</td>
         <td>[% reserveloo.itype %]</td>
         <td>[% reserveloo.location %]</td>
