Bug 16371 - Quote of the Day (QOTD) - Display in different interfaces
Set 'QuoteOfTheDay'-syspref to 'opac intranet' to allow displaying news in the
opac and the staff client.

Add 'commandline' to allow news in the commandline (where applicable)

Accepts all values accepted by the C4::Context->interface()

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-main.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-main.tt
@@ -49,7 +49,7 @@
             </div>
         [% END %]
 
-        [% IF ( display_daily_quote && daily_quote ) %]
+        [% IF ( daily_quote ) %]
             <div id="daily-quote">
                 <h3>Quote of the Day</h3>
                 <div>
