--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/authorised_values.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/authorised_values.tt
@@ -99,6 +99,18 @@ $(document).ready(function() {
             <label for="lib_opac">Description (OPAC): </label>
             <input type="text" name="lib_opac" id="lib_opac" value="[% lib_opac %]" maxlength="200" />
         </li>
+        <li>
+            <label for="no_reservation">No reservation: </label>
+            <input type="checkbox" name="no_reservation" id="no_reservation" [% IF ( no_reservation == 1 ) %]checked="checked" [% END %]/>
+        </li>
+        <li>
+            <label for="no_checkout">No checkout: </label>
+            <input type="checkbox" name="no_checkout" id="no_checkout" [% IF ( no_checkout == 1 ) %]checked="checked" [% END %]/>
+        </li>
+        <li>
+            <label for="lib">Overdue fine: </label>
+            <input type="text" name="overdue_fine" id="overdue_fine" value="[% overdue_fine %]" />
+        </li>
         <li><label for="branches">Libraries limitation: </label>
             <select id="branches" name="branches" multiple size="10">
                 <option value="">All libraries</option>
@@ -241,8 +253,11 @@ $(document).ready(function() {
 	<th>Authorized value</th>
 	<th>Description</th>
 	<th>Description (OPAC)</th>
+  <th>No reservation</th>
+  <th>No checkout</th>
+  <th>Overdue fine</th>
 	<th>Icon</th>
-    <th>Branches limitations</th>
+  <th>Branches limitations</th>
 	<th>Edit</th>
 	<th>Delete</th>
 	</tr>
@@ -256,6 +271,9 @@ $(document).ready(function() {
 	<td>[% loo.authorised_value %]</td>
 	<td>[% loo.lib %]</td>
 	<td>[% loo.lib_opac %]</td>
+  <td>[% IF ( loo.no_reservation == 1 ) %] True [% END %]</td>
+  <td>[% IF ( loo.no_checkout == 1 ) %] True [% END %]</td>
+  <td>[% loo.overdue_fine %]</td>
 	<td>[% IF ( loo.imageurl ) %]<img src="[% loo.imageurl %]" alt=""/>[% ELSE %]&nbsp;[% END %]</td>
     <td>
         [% IF loo.branches.size > 0 %]
