--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tt
@@ -42,7 +42,7 @@
 
     [% IF ( CAN_user_tools_edit_notices ) %]
     <dt><a href="/cgi-bin/koha/tools/sendOverdueBills.pl">Send overdue bills</a></dt>
-    <dd>Send overdue bills to SAP</dd>
+    <dd>Create and send overdue bills</dd>
     [% END %]
     
     [% IF ( CAN_user_tools_label_creator ) %]
