--- a/misc/cronjobs/iPostPDF/pdf_bill.tmpl
+++ b/misc/cronjobs/iPostPDF/pdf_bill.tmpl
@@ -3,6 +3,9 @@
 		<meta charset="UTF-8">
 		<title>Lasku</title>
 		<style>
+			body {
+				font-size: large;
+			}
 			.header, .footer {
 				margin-top:20mm;
 				margin-left:21mm;
@@ -45,6 +48,11 @@
 				position: absolute;
 				right: 0;
 			}
+			ul.info {
+				padding:0;
+				margin:0;
+				list-style: none;
+			}
 			ul.items-row {
 			  display: table;
 			  width: 100%;
@@ -55,7 +63,14 @@
 
 			ul.items-row > li {
 			  display: table-cell;
-			  width: 20%;
+			  width: 25%;
+			  padding: 5mm 0;
+			}
+			li {
+				list-style: none;
+			}
+			.hidden {
+				display: none;
 			}
 		</style>
 	</head>
